Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: It's Only the Future if We Develop
+title: It's only the Future if we Develop it.
 header-img: img/home-bg.png
 email: alfredo.i.urdaneta@gmail.com
 copyright_name: aurda012
